# secure-guard

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  setuid.sh
.claude/commands/: check-your-work.md  commit-pull-push.md  gap-analysis.md
docs/clients/: local-client.conf  vpn.fronthouse.ai.conf  wg0.conf
installer/: README.md
installer/docker/: .gitignore  Caddyfile  Dockerfile.dart-server  Dockerfile.flutter-console  Dockerfile.vpn-daemon  README.md  docker-compose.yml
installer/linux/: Dockerfile.build  build-package.sh  docker-build.sh  docker-test.sh  install.sh  minnowvpn.service  secureguard.service  uninstall.sh
installer/macos/: build-dmg.sh  com.minnowvpn.vpn-service.plist  com.minnowvpn.vpn-service.sb  com.secureguard.vpn-service.plist  com.secureguard.vpn-service.sb  create-pkg.sh  install.sh  uninstall.sh
installer/windows/: install.ps1  minnowvpn.nsi  secureguard.nsi  uninstall.ps1
minnowvpn-server/: .env.example  docker-compose.yml  pubspec.yaml
minnowvpn-server/lib/: server.dart
minnowvpn_client/: README.md  pubspec.yaml  start.sh  stop.sh
minnowvpn_client/lib/: main.dart
minnowvpn_client/linux/: CMakeLists.txt  (+1 more)
minnowvpn_console/: README.md  pubspec.yaml  start.sh
public/: .gitignore  Caddyfile  LICENSE  README.md  docker-compose.yml  install.sh
scripts/: release-build.sh  version-bump.sh
secureguard-server/: docker-compose.yml  pubspec.yaml
secureguard_client/: .metadata  pubspec.yaml  start.sh  stop.sh
secureguard_console/: pubspec.yaml  start.sh
src/: client.rs  error.rs  lib.rs  main.rs  server.rs
(+230 files in other folders)
